# metal_playground

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
src/: CMakeLists.txt  main.cpp
src/common/: shader_types.h  types.h
src/metal/: CMakeLIsts.txt
src/shaders/: basic.metal
